<resources>
    <string name="app_name">Alumi.io</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="Alumi.IO">TextView</string>
    <string name="alumi_io">Alumi.IO</string>
    <string name="ver_tpc">Ver Tpc</string>
    <string name="ver_recados">Ver Recados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="turma_sample_name">Turma_Sample_Name</string>
    <string name="ver_alunos">Ver Alunos</string>
    <string name="create_recado">Create Recado</string>
    <string name="submeter">Submeter</string>
    <string name="descricao">Descricao</string>
    <string name="topico">Topico</string>
    <string name="descricao_do_tpc">Descricao do tpc</string>
    <string name="create_a_teste">Create a Teste</string>
    <string name="ver_testes">Ver Testes</string>
    <string name="descricao_teste">Descricao Teste</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="lista_de_turmas">Lista de Turmas</string>
</resources>
