<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.CreateTpcActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_weight="0"
        android:background="@drawable/oval_view"
        android:gravity="center"
        android:text="@string/alumi_io"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextDescricaoTPC"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/descricao_do_tpc"
        android:inputType="textLongMessage" />

    <Spinner
        android:id="@+id/spinnerDisciplinaTurma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <Button
        android:id="@+id/buttonSubmeterTPC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="SubmeterTPConCLick"
        android:text="@string/submeter" />
</LinearLayout>