<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home_professor2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_weight="0"
        android:background="@drawable/oval_view"
        android:text="@string/alumi_io"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:textAlignment="center"
        android:text="TurmaXXX"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/oval_btn"
        android:text="Ver Alunos"
        android:onClick="alunoclick"
        android:textColor="@android:color/background_light"
        android:textSize="10sp" />
    />

    <Button
        android:id="@+id/button9"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/oval_btn"
        android:text="@string/ver_recados"
        android:onClick="recadosclick"
        android:textColor="@android:color/background_light"
        android:textSize="10sp" />
    />

    <Button
        android:id="@+id/button10"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/oval_btn"
        android:text="@string/ver_tpc"
        android:onClick="tpcclick"
        android:textColor="@android:color/background_light"
        android:textSize="10sp" />
    />
</LinearLayout>